--- a/css/style.css
+++ b/css/style.css
@@ -584,4 +584,12 @@ left-align{
   padding: 5em;
   border-radius: 5px;
 }
+
+.blog-title{
+  font-size: 2em;
+}
+
+.blog-sub{
+  color: #f0542f;
+}
 /* End Forms */
