--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ footer{
 
 .portfolio-title h4,
 .portfolio-title h3{
+  font-size: .6em;
   text-align: center;
   line-height: 1em;
   margin: .6em 0em;
