--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ header{
 /*Parallax Markup*/
 
 .landing{
-  padding-top: 16%;
-  padding-bottom: 16%;
+  padding-top: 12%;
+  padding-bottom: 12%;
   text-align: center; 
   margin-left: auto;
   margin-right: auto;
@@ -114,9 +114,12 @@ h3{
 
 .focus-sub{
 }
+
 .footer-text{
-  color: #aaaaaa;
-  font-weight: 400;
+  font-size: .6em !important;
+  letter-spacing: .4em;
+  color: #434343;
+  font-weight: 600;
   font-size: 1em;
   line-height: 1.3em;
 }
@@ -218,9 +221,15 @@ h3{
     
 }
 footer{
-  padding: 7em 0em 5em;
-  background-color: #1e1e20;
+  padding: 4em 0em 2em;
+  background-color: #0f1010;
   min-height: 0px;
+}
+footer p{
+  margin: 0;
+  line-height: 2em;
+  color: #434343;
+  font-weight: 400;
 }
 
 @media (min-width: 100px) and (max-width: 399px){
@@ -234,8 +243,7 @@ footer{
   .small-container{
     width: 40px;
     height: 40px;
-    padding-rig
-    ht: 1em;
+    padding-right: 1em;
     margin-bottom: 4em;
     padding-right: 2em;
     float:left;
@@ -297,8 +305,6 @@ footer{
 .portfolio-title h3{
   font-size: .8em;
 }
-
-
 
 @media (min-width: 400px) and (max-width: 549px) {
   .side-contact{
