--- a/css/style.css
+++ b/css/style.css
@@ -1,685 +1,99 @@
-
-
-/* Global Values */
-body{
-  color: #32323c;
-}
-.circle{
-  background-color: #f0542f;
-}
-.intro{
-  background-color: white;
-}
-.skills{
-  background-color: #eeedea;
-}
-.bg{
-  background-image: url(../images/header.png);
-  background-size: 1600px auto;
-  background-position: 0 -50%;
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  height: 300%;
-  top:0;
-  left:0;
-  z-index: -1;
-}
-header{
-  color: #f0542f;
+/** Thin */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 200;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff2");
 }
 
-/*Parallax Markup*/
-
-.landing{
-  padding-top: 14%;
-  padding-bottom: 14%;
-  text-align: center; 
-  margin-left: auto;
-  margin-right: auto;
-}
-.landing h1{
-  font-weight: 600;
-  font-size: 1.4em;
-  letter-spacing: .3em
-}
-.about h4{
-  margin-top: 1em;
-}
-h4{
-  font-size: 1.6em;
-  letter-spacing: .1em;  
-}
-h3{
-  line-height: 2em;
-}
-header h1{
-  color: white;
-}
-/*Modular Spacing*/
-.section{
-  padding: 10rem 0 10rem;
-}
-.heading{
-  text-align: left;
-  padding: 5em 0 0rem;
-}
-/*Dark Color Scheme (Helper)*/
-.dark {
-  background-color: #32323c;
-  color: white;
-}
-/*Center (Helper)*/
-.center{
-  margin: auto;
-  text-align:center; 
-}
-
-/*Fonts*/
-h6{
-  font-weight: 500;
-  font-size: 1em;
-  letter-spacing: .1em; 
-}
-p{
-  line-height: 2em;
-}
-.module p, 
-.module h6{
-  font-size: 1em;
-  margin: 0px;
-}
-
-h3{
-  font-family: "Merriweather";
+/** Regular */
+@font-face {
+  font-family: "San Francisco";
   font-weight: 400;
-  font-style: italic;
-  font-size: .9em;
-  letter-spacing: .3px;
-  margin: 0 0 0 0;
-}
- 
-
-.focus-title{
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 1em;
-  letter-spacing: .05em;
-  margin-top: 1em;
-  margin-bottom: .6em;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
 
-.about{
-  padding-right: 1em;
-  border-right: 1px solid #dfdfdf;
-}
-
-.focus-sub{
-}
-
-.footer-text{
-  font-size: .6em !important;
-  letter-spacing: .4em;
-  color: #434343;
+/** Semi Bold */
+@font-face {
+  font-family: "San Francisco";
   font-weight: 600;
-  font-size: 1em;
-  line-height: 1.3em;
-}
-
-.circle-container{
-  float: left;
-}
-
-.circle{
-  border-radius: 50%;
-  height: 0;
-  padding-bottom: 100%;
-  width: 100%;
-}
-.full-line{
-  width: 44%;
-  padding-bottom: 3em;
-  border-bottom: 1px dotted #c0c0c0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 4em;
-}
-.transition-container{
-  width: 50px;
-  height: 0px;
-  position:relative;
-  left: 64%;
-  top: -25px;
-  z-index: 10;
-}
-.transition{
-  background-color: #f0542f;
-  position:relative;
-}
-.about{
-  overflow: hidden; 
-}
-.header-line{
-  margin: 1em auto 2em auto;
-  width: 40px;
-  height: 3px;
-  background-color: #f0542f;
-}
-.left{
-  margin: 1em auto 2em 0;
-}
-.right{
-  margin: 1em 0 2em auto;
-}
-.agenda, .portfolio, .blog{
-  color: #32323c;
-  background-color: white;
-}
-.contact,
-.dark{
-  color:white;
-  background-color: #2a2c2b;
-}
-.social{
-  padding: 3em 0 1em 0;
-  background-color: #2a2c2b;
-  color: white;
-}
-.user{
-  background-image:url("../images/user.png");
-  background-size: 110%;
-  background-position: 3px -10px;
-}
-.weather{
-  background-image:url("../images/weather-app.png");
-  background-size: 1600px auto;
-  background-position: 40% 55%;
-  overflow: hidden;
-}
-.mackenzie{
-  background-image:url("../images/mackenzie.png");
-  background-size: 1600px auto;
-  background-position: 32% 33%;
-  overflow: hidden;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff");
 }
 
 
-
-.find{
-  color: white;
-  background-color: #1e1e20;
-  padding: 3em 0em 1em;
-}
-.agenda-mod{
-  color: white;
-  background-color: black;
-  padding: 4em;
-  margin: 1em 0;
-  border-radius: 4px;
-  text-align: left;
+h1, h2, h3, h4, h5, h6, p, body, li{
+    font-family: "San Francisco","Helvetica Nueue", sans-serif;
+    letter-spacing: 0;
+    margin-bottom: 0;
+    color: #2C3740;
+    font-weight: 200;
+    letter-spacing: .01em;
 }
 
-.agenda-mod{
-    
-}
-footer{
-  padding: 4em 0em 2em;
-  background-color: #0f1010;
-  min-height: 0px;
-}
-footer p{
-  margin: 0;
-  line-height: 2em;
-  color: #434343;
-  font-weight: 400;
-}
-
-.portfolio-title{
-  margin: 0;
-  padding: 2em 0em;
-}
-
-.portfolio-title h4,
-.portfolio-title h3{
-  font-size: .6em;
-  text-align: center;
-  line-height: 1em;
-  margin: .6em 0em;
-}
-
-.portfolio-title h4{
-  font-size: .8em;
-}
-
-.portfolio-title h3{
-  font-size: .8em;
-}
-
-.portfolio .button{
-  margin-left: auto;
-  margin-right: auto;
-}
-/* Menu module*/
-.menu {
-  background-color: #eeedea;
-  padding: 0em 0 0em 0;
-}
-.menu h6{
-  text-align: center;
-  font-weight: 600;
-  font-size: .6em;
-  letter-spacing: .3em;
-  color: rgba(0, 0, 0, 0.8);
-  text-transform: uppercase;
-  -webkit-font-smoothing: antialiased !important;
-
-}
-.menu .two {
-  width: 16%; /* Fallback */
-  width: -webkit-calc(100% / 6);
-  width: calc(100% / 6);
-}
-.menu .columns{
-  padding: 2em 0em 1em;
-  margin: 0;
-  height: 100%;
-  border-right: 1px solid rgba(0, 0, 0, .2);
-}
-.menu .first{
-  border-left: 1px solid rgba(0, 0, 0, .2); 
-}
-.menu .header-line{
-  width: 0%;
-  margin: 0 auto 0 auto;
-  position: relative;
-  top: -10px;
-}
-.menu .columns:hover .header-line{
-  transition-property: width;
-  transition-duration: .2s;
-  transition-timing-function: ease-out;
-  width: 10%;
-} 
-
-
-@media (min-width: 100px) and (max-width: 399px){
-  /*About Circle*/
-  
-  .circle-container{
-    width: 80px;
-    height: 80px;
-    padding-right: 2em;
-    margin-bottom: 1.3em;
-  }
-  .small-container{
-    width: 40px;
-    height: 40px;
-    padding-right: 1em;
-    margin-bottom: 4em;
-    padding-right: 2em;
-    float:left;
-  }
-  .circle {
-    background-color: blue;
-  }
-  .title{
-    float:left;
-  }
-  .divider {
-    min-height: 0;
-    border-right: 0 solid #c0c0c0;
-    border-bottom: 1px solid #c0c0c0;
-  }
-  .skills{
-    padding-top: 1.5em;
-    padding-bottom: 1.5em;
-  }
-  .module{
-    height: 110px !important;
-    padding-top: 2em;
-    padding-bottom: 2em;
-  }
-  .focus-title{
-    font-family: "Roboto";
-    font-weight: 900;
-    font-size: 1em;
-    letter-spacing: .05em;
-    margin-top: 1em;
-    margin-bottom: .6em;
-  }
-
-  .about{
-    border-right: 0px;
-    border-bottom: 1px solid #dfdfdf;
-    padding-bottom: 2em;
-    margin-bottom: 2em;
-  }
-
-  .focus-sub{
-
-  }
-    .side-contact{
-    border-bottom: 2px solid #232524;
-    padding-bottom: 1em;
-    margin-bottom: 4em;
-  }
-}
-
-
-@media (min-width: 400px) and (max-width: 549px) {
-  .side-contact{
-    border-bottom: 2px solid #232524;
-    padding-bottom: 1em;
-    margin-bottom: 4em;
-  }
-  .circle-container{
-    width: 80px;
-    height: 80px;
-    padding-right: 1em;
-    margin-bottom: 2em;
-  }
-  .small-container{
-    width: 40px;
-    height: 40px;
-    padding-right: 1em;
-    margin-bottom: 4em;
-    padding-right: 2em;
-    float:left;
-  }
-  .circle {
-    background-color: blue;
-  }
-  .title{
-    float:left;
-    margin-top: 1em;
-    padding-bottom: 1em;
-    margin-bottom: 2em;
-  }
-  .divider {
-    min-height: 0;
-    border-right: 0 solid #c0c0c0;
-    border-bottom: 1px solid #c0c0c0;
-  }
-
-  .module{
-    height: 110px !important;
-    padding-top: 2em;
-    padding-bottom: 2em;
-  }
-  .skills{
-    padding-top: 1em;
-    padding-bottom: 1em;
-  }
-  .module p{
-    font-size: 1em;
-  }
-  .focus-title{
-    margin-top: 1em;
-    margin-bottom: .6em;
-  }
-
-  .about{
-    border-right: 0px;
-    border-bottom: 1px solid #dfdfdf;
-    margin-bottom: 2em;
-  }
-
-  .focus-sub{
-
-  }
-}
-
-@media (min-width: 550px) and (max-width: 749px){
-  .circle-container{
-    width: 100%;
-    max-width: 70px;
-    margin: 0 auto 0 auto;
-  }
-  .about{
-    overflow: hidden; 
-  }
-  .small-container {
-    margin: 0 auto 1em 0;
-    width: 40px;
-    min-height: 0px;  
-  }
-
-  .two-row-std .three.columns{
-    width: 48% !important;
-  }
-  .two-row-edge{
-    margin-left: 0% !important;
-  }
-  .skills{
-    padding-top: 4em;
-    padding-bottom: 2em;
-  }
-  .module{
-    padding-left: 1em;
-    padding-right: 2em;
-    margin-bottom: 4em;
-  }
-  .title{
-    width: 100%;
-    float:left;
-    margin: 1em auto .5em auto;
-  }
-  
-}
-
-@media (min-width:750px){
-  .head{
-    max-width: 550px;
-  }
-  
-  .circle-container{
-    width: 100%;
-    max-width: 100px;
-    min-height: 0px;
-    margin: 0 auto 0 auto;
-  }
-  .small-container {
-    margin: 0 auto 1em 0;
-    width:40px;
-    min-height: 0px;  
-  }
-  .divider {
-    height: 90px;
-    border-right: 1px solid #c0c0c0;
-  }
-
-  .module{
-    padding-left: 1em;
-    padding-right: 2em;
-  }
-  
-  .title{
-    width: 100%;
-    float:left;
-    margin: 1em auto .5em auto;
-  }
-}
-
-.agenda .button{
-  border-color: white;
-  color: white; 
-}
-
-
-/*Responsive Full-Width Grid*/
-.gallery h4{
-   margin: 0; 
-}
-
-
-.full-width-container{
-  max-width: 100%;
-}
-.folio {
-  margin-left: 0;
-  width: 25%;
-  height: auto;
-}
-.full-width-grid {
-  margin: 0 0 0 0;
-  padding: 0;
-  list-style: none;
-  position: relative;
-  width: 100%;
-}
-.full-width-grid li {
-  position: relative;
-  float: left;
-  overflow: hidden;
-  margin: 0;
-  width: 25%; /* Fallback */
-  width: -webkit-calc(100% / 4);
-  width: calc(100% / 4);
-}
-.full-width-grid li a,
-.full-width-grid li a img {
-  display: block;
-  width: 100%;
-  cursor: pointer;
-} 
-.full-width-grid li a img {
-  max-width: 100%;
-  margin: 0;
-}
-@media screen and (min-width: 300px) {
-  .full-width-grid li {
-    width: 100%;
-  }
-}
-@media screen and (min-width: 400px) {
-  .full-width-grid li {
-    width: 100%; /* Fallback */
-    width: -webkit-calc(100% / 1);
-    width: calc(100% / 1);
-  }
-}
-@media screen and (min-width: 550px) {
-  .full-width-grid li {
-    width: 50%; /* Fallback */
-    width: -webkit-calc(100% / 2);
-    width: calc(100% / 2);
-  }
-}
-@media screen and (min-width: 750px) {
-  .full-width-grid li {
-    width: 50%; /* Fallback */
-    width: -webkit-calc(100% / 2);
-    width: calc(100% / 2);
-  }
-}
-@media screen and (min-width: 1000px) {
-  .full-width-grid li {
-    width: 33%; /* Fallback */
-    width: -webkit-calc((100% / 3));
-    width: calc((100% / 3));
-  }
-}
-@media screen and (min-width: 1200px) {
-  .full-width-grid li {
-    width: 33%; /* Fallback */
-    width: -webkit-calc(100% / 3);
-    width: calc(100% / 3);
-  }
-}
-/*End Responsive Full-Width Grid*/
-
-
-/* Forms */
-input[type="email"],
-input[type="text"],
-textarea,
-select {
-  font-weight: 500;
-  font-size: .8em;
-  letter-spacing: .17em;
-  color: white;
-  height: 38px;
-  padding: 0px 0px .6em 0px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: transparent;
-  border-bottom: 1px solid #dfdfdf;
-  border-radius: 0px;
-  box-shadow: none;
-  box-sizing: border-box; 
-}
-
-input[type="email"]:focus,
-input[type="text"]:focus,
-textarea:focus,
-select {
-  height: 38px;
-  padding: 0px 0px .6em 0px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: transparent;
-  border-bottom: 1px solid #dfdfdf;
-  border-radius: 0px;
-  box-shadow: none;
-  box-sizing: border-box;
-  box-shadow: none;
-  outline: 0 none;
-}
-
-textarea,
-textarea:focus,
-textarea:active{
-  height: 10em;
-}
-
-input[type="email"]:active,
-input[type="text"]:active,
-textarea:active,
-select {
-  height: 38px;
-  padding: 0px 0px .6 0px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: transparent;
-  border-bottom: 1px solid white;
-  border-radius: 0px;
-  box-shadow: none;
-  box-sizing: border-box; 
-}
-
-input[type="submit"],.button-contact{
-  font-weight: 600;
-  font-size: .6em;
-  letter-spacing: .3em;
-  color: white;
-  background-color: #f0542f !important;
-  border: 0px solid #f0542f;
-  margin-top: 1em auto;
-  border-radius: 2px;
-  height: 38px;
-}
-
-.button-center{
-  margin-left: auto !important;
-  margin-right: auto !important;
-}
-
-.gallery{
-  margin-top: 0em;
-  padding-top: 0em; 
-}
-
-left-align{
-  text-align: left; 
-}
-
-.blog-module{
-  padding: 5em;
-  border-radius: 5px;
-}
-
-.blog-title{
-  font-size: 2em;
-}
-
-.blog-sub{
-  color: #f0542f;
-}
-/* End Forms */
 a {
-    text-decoration: none; 
+    text-decoration: none
 }
+
+h1, .text-1 {
+    font-size: 32px;
+    line-height: 51px;
+}
+
+h2, .text-2 {
+    font-size: 24px;
+    line-height: 38px;
+}
+
+p, .text-3{
+    font-size: 18px;
+    line-height: 29px;
+}
+
+
+.u-grey-1{
+    color:#2C3740;
+}
+
+.u-grey-2{
+    color:#576A74;
+}
+
+.u-grey-3{
+    color:#8DA0A2;
+}
+
+.u-accentColor{
+    color: #E05B5B;
+}
+
+.u-secondaryColor{
+    color: #8DA0A2;
+}
+
+.u-bold{
+    font-weight: 600;
+}
+
+/*Components*/
+.container--header{
+    margin-top: 160px;
+    margin-bottom: 160px;
+}
+
+ul.header-links li{
+    margin-right: 12px;
+}
+
+ul.footer-links{
+    list-style:none;
+}
+
+ul.header-links--inline li{
+    display: inline-block;
+}
+
+.card{
+    padding-top: 160px;
+    padding-bottom: 160px;
+    border-bottom: 1px solid #E6E6E6;
+}
+
